# gemini-vulkan-engine

./: .gitignore  CMakeLists.txt  README.md  result.md
assets/shaders/: simple.frag  simple.vert
src/: main.cpp
src/assets/: AssetManager.cpp  AssetManager.h  Material.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Texture.h
src/core/: Application.cpp  Application.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  Log.cpp  Log.h  ServiceLocator.h  Window.cpp  Window.h
src/graphics/: Buffer.cpp  Buffer.h  CommandManager.cpp  CommandManager.h  Renderer.cpp  Renderer.h  SamplerCache.cpp  SamplerCache.h  Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h  VulkanUtils.cpp  VulkanUtils.h
src/physics/: CollisionCallbackReceiver.h  CustomTickCallback.cpp  CustomTickCallback.h  EngineMotionState.h  PhysicsSystem.cpp  PhysicsSystem.h
src/scene/: Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
src/scene/Components/: CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  TransformComponent.cpp  TransformComponent.h
src/ui/: UIManager.cpp  UIManager.h
